Fixed a few mobile layout bugs

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -136,3 +136,7 @@ body {
 .question {
     margin-bottom: 1em;
 }
+
+.navbar-toggle {
+  display: none;
+}
